# RFC-rag-for-company-

./: .env.example  .gitignore  .semgrepignore  .trivyignore  1.md  PROJECT_PLAN.md  README.md  README_EN.md  UPS5000-通用文档-RAG知识库检索评测报告.md  bandit.yaml  docker-compose.app.yml  docker-compose.infra.yml  docker-compose.lightweight.yml  docker-compose.yml  docker-network-dns-test-report.md  kong.yml  trivy.yaml  产品漏洞体验报告.md  开发日志.md
backend/: .env.example  Dockerfile  Dockerfile.embedding  Dockerfile.ingest  Dockerfile.lightweight  Dockerfile.llm  Dockerfile.pgvector-zh  Dockerfile.worker  alembic.ini  mock_embedding_service.py  mock_llm_service.py  pyproject.toml  requirements.lightweight.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260610_init.py  20260624_add_pgvector_vectors.py  2026_06_12_0930-add_system_config.py  2026_06_15_1736-20260615_conv_eval.py  2026_06_15_1736-add_conversations_search_history_evaluation.py  2026_06_15_1753-20260615_user_active.py  2026_06_15_1753-add_user_display_name_and_is_active.py.bak  2026_06_15_2315-20260615_field_perm.py  (+4 more)
backend/app/: config.py  database.py  main.py
backend/app/core/: cache.py  (+5 more)
backend/tests/: test_api_keys.py  test_chat_feedback.py  test_citation.py  test_collaboration.py  test_conversation.py  test_document_reprocess.py  test_evaluation.py  test_health.py  test_kb_stats.py  test_keyword_annotator.py  test_operations.py  test_permissions.py  test_pipelines.py  test_prompt_injection.py  test_retrieval.py  test_search_history.py  test_sensitive_info_service.py  test_users.py
(+343 files in other folders)
